--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 body {
     display: flex;
     margin: 0;
+    background-image: url('Images/startscreenbackground.jpg');
+    background-size: cover;
 
 }
 #gameCanvas {
@@ -22,8 +24,7 @@ body {
     transform: translate(-50%, -50%);
     height: 200px;
     width: 400px;
-    background-color: rgba(240, 255, 255, 0.541);
-    border-radius: 15%;
+
 }
     #startButton img {
         height: 200px;
@@ -41,6 +42,7 @@ body {
     height: 200px;
     width: 1000px;
 }
+
     #char div{
         margin: 0;
         height: 200px;
@@ -51,10 +53,19 @@ body {
         width: 200px;
     }
 
+h1{
+    font-size: 40px;
+    color: white;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
 #replayButton {
     z-index: 1;
     position: absolute;
-    top: 65%;
+    top: 70%;
     left: 50%;
     transform: translate(-50%, -50%);
     height: 200px;
