--- a/style.css
+++ b/style.css
@@ -1,31 +1,32 @@
-body {
+html, body {
+    height: 100%;
+    width: 100%;
     margin: 0;
-    height: 100vh;
-    width: 100vw;
+    display: block;
+    overflow: hidden;
+
+    top: 0;
+    left: 0;
+}
+/* body {
+    margin: 0;
+
     background-color: black;
     background-image: url("Images/stars.png");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    overflow: hidden;
+    
     display: block;
-}
+} */
 
 #gameCanvas {
-    display: none;
     z-index: -1;
+
 }
 
 #startCanvas, #gameCanvas {
-    display: block;
-    border: 5px solid rgba(0, 230, 69, 1);
-    position: absolute;
-    height: 600px;
-    width: 800px;
-    padding: 0;
-    margin: auto;
+    position:absolute;
     top: 0;
-    bottom: 0;
     left: 0;
-    right: 0;
 }
