--- a/style.css
+++ b/style.css
@@ -1,23 +1,32 @@
-html, body {
-    height: 100%;
-    width: 100%;
-    margin: 0;
-    display: block;
-    overflow: hidden;
 
-    top: 0;
-    left: 0;
+body{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+    background: linear-gradient(135deg, rgb(244, 248, 242), rgb(40, 247, 21), rgb(78, 138, 0));
 }
 
+h1{
+    font-size: 5rem;
+    height: 100px;
+    border: solid red 3px;
+    margin: 0px;
+    padding: 0px;
+    font-family: 'Press Start 2P', cursive;
+}
 
-/* 
 #gameCanvas {
     z-index: -1;
+    display: none;
 
 }
 
+
 #startCanvas, #gameCanvas {
-    position:absolute;
-    top: 0;
-    left: 0;
-} */
+    box-shadow: 10px 10px 10px black;
+    border-radius: 33px;
+} 
